--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
     "chai": "^4.0.2",
     "chai-as-promised": "^7.0.0",
     "chai-bignumber": "^2.0.0"
+  },
+  "devDependencies": {
+    "solidity-coverage": "^0.4.11"
   }
 }
